--- a/src/components/Articles/styles.scss
+++ b/src/components/Articles/styles.scss
@@ -4,7 +4,7 @@
 .article {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 60vh;
   width: 100%;
   background-color: $very-light-gray;
 }
