--- a/src/components/Main/styles.scss
+++ b/src/components/Main/styles.scss
@@ -3,10 +3,12 @@
 
 .main {
   display: flex;
-  background: url('../../assets/images/bg-intro-desktop.svg') $very-light-gray no-repeat; 
-  background-position: 1000px -230px;
-  background-size: cover;
-  height: 65vh;
+  background: url('../../assets/images/bg-intro-desktop.svg') $very-light-gray no-repeat scroll; 
+  // background-position: 700px -300px;
+  background-size: 1200px 1000px;
+  background-position-y: -250px;
+  background-position-x: 45vw;
+  height: 90vh;
 }
 
 .card {
@@ -39,6 +41,6 @@
 .mockups {
   position: absolute;
   right: -125px;
-  top: -10px;
+  top: -55px;
   z-index: 1;
 }
