--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,4 +5,10 @@
   padding: 0;
   outline: 0;
   font-family: 'Open Sans', sans-serif;
+
+  body {
+    // width: 100vw;
+    overflow-x: hidden;
+  }
 }
+
